--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,22 +7,12 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - run: npm i
-      - save_cache:
-        key: "npm-packages"
-        paths:
-          - /src/node_modules
       - run: npm run lint
-  
   test:
     docker:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - restore_cache:
-        keys:
-         - "npm-packages"
-      - run: npm i
       - run: npm run test
 
   analyze:
@@ -30,17 +20,15 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - restore_cache:
-        keys:
-          - "npm-packages"
       - run: npm audit
 
 workflows:
   my_workflow:
-    - build
-    - test:
-      - requires:
-        - build
-    - analyze:
-      - requires:
-        - test
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
+      - analyze:
+          requires:
+            - test
